--- a/app/src/main/res/layout/activity_detail_team.xml
+++ b/app/src/main/res/layout/activity_detail_team.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/img_background_detail"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="center"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_launcher_background" />
 
             <TextView
@@ -30,7 +30,7 @@
                 android:layout_gravity="center"
                 android:text="Liverpool"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/holo_orange_dark"
                 android:textStyle="bold" />
 
             <TextView
@@ -52,7 +52,7 @@
                 android:layout_marginTop="72dp"
                 android:text="Medan"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/holo_orange_dark"
                 android:textStyle="bold" />
 
         </FrameLayout>
